build_usb_check_v5.txt
cargo : warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
At line:1 char:1
+ cargo check -p base-station --target thumbv6m-none-eabi --features rp ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: profil...workspace root::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
package:   C:\Users\Mike\OneDrive\Documents\git\rocket_vR\rocket\Cargo.toml
workspace: C:\Users\Mike\OneDrive\Documents\git\rocket_vR\Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\Mike\OneDrive\Documents\git\rocket_vR\base-station\Cargo.toml
workspace: C:\Users\Mike\OneDrive\Documents\git\rocket_vR\Cargo.toml
    Blocking waiting for file lock on build directory
    Checking base-station v0.1.0 (C:\Users\Mike\OneDrive\Documents\git\rocket_vR\base-station)
error[E0412]: cannot find type `USB_IRQ` in module `$crate::interrupt::typelevel`
  --> base-station\src\hardware.rs:32:5
   |
32 |     USB_IRQ => embassy_rp::usb::InterruptHandler<USB>;
   |     ^^^^^^^ not found in `$crate::interrupt::typelevel`

error[E0560]: struct `Hardware` has no field named `usb_driver`
   --> base-station\src\hardware.rs:111:13
    |
111 |             usb_driver: embassy_rp::usb::Driver::new(r.UsbR.usb, Irqs),
    |             ^^^^^^^^^^ `Hardware` does not have this field
    |
    = note: all struct fields are already assigned

Some errors have detailed explanations: E0412, E0560.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `base-station` (bin "base-station") due to 2 previous errors
